--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0001b--17-Aug-2022"
+version:          "0001c--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -69,6 +69,10 @@ github:
 <br id="idx00">
 # {{ site.title }}
 
+<br id="idx05">
+<img src="images/QR.png" width="50%">
+<br><br>
+
 Setiap pagi, ibu Alus berjualan Nasi Uduk di ujung simpang jalan Harapan,
 sekitar 300m dari stasiun Lenteng Agung -- sebelah kanan jika mengarah ke Depok.
 
@@ -97,10 +101,6 @@ Kalau dengan "extra tempe", dibulatkan menjadi Rp. 15000.
 
 Syarat dan ketentuan berlaku.
 Ayam Goreng dibeli secara terpisah di KFC LA Terrace, sekitar 1300m dari lokasi ibu Alus (arah Depok).
-
-<br id="idx05">
-<img src="images/QR.png" width="60%">
-<br><br>
 
 This [GitHub Page](https://pages.github.com/) is hosted at [GitHub.com]({{ site.urlgithub }}).
 
