--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0001c--17-Aug-2022"
+version:          "0001d--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -21,20 +21,10 @@ keywords:         "jekyll, testing"
 navbarlinks:
 - navbar:         "Home"
   link:           "/"
-- navbar:         "Links"
-  link:           "/LINKS/"
-- navbar:         "Tips"
-  link:           "/TIPS/"
-- navbar:         "Zip File"
-  link:           "/template.zip"
-- navbar:         "TarBall"
-  link:           "/template.tar.bz2"
 - navbar:         "GitHub"
   link:           "https://github.com/sdnbhd/alus"
 - navbar:         "Listing"
   link:           "/000.html"
-- navbar:         "About"
-  link:           "/ABOUT/"
 - navbar:         "GitHub Page"
   link:           "https://sdnbhd.github.io/alus/"
 lang:             "en-US"
@@ -229,17 +219,11 @@ gem 'github-pages', group: :jekyll_plugins
 <div class="container">
   <header>
   <div class="row">
-    <div class="column left">
-      <img src="{{ site.baseurl }}/assets/images/default.jpg" alt="Default" style="width:130px; border-radius:50%">
-    </div>
     <div class="column right1">
       {% if page.title %}{{ page.title | escape }}
       {% else %}{{ site.title | escape }}{% endif %}
     </div>
     <div class="column right2">
-      {% if page.author %}{{ page.author | escape }}
-      {% else %}{{ site.author | escape }}{% endif %}
-      ---
       {% if page.address %}{{ page.address | escape }}
       {% else %}{{ site.address | escape }}{% endif %}
     </div>
