modified:   _config.yml

--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0001d--17-Aug-2022"
+version:          "0001e--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -209,9 +209,9 @@ gem 'github-pages', group: :jekyll_plugins
 <!DOCTYPE html>
 <html lang="en">
 <!-- File _layouts/layout.html           -->
-<!-- (c) 2021 - 2021 VauLSMorg           -->
-<!-- REV00: Sun 04 Jul 2021 10:48:43 WIB -->
-<!-- START: Wed 17 Feb 2021 19:44:53 WIB -->
+<!-- (c) 2021 - 2022 VauLSMorg           -->
+<!-- REV00: Sun 04 Jul 2021 10:00        -->
+<!-- START: Wed 17 Feb 2021 19:00        -->
 <!-- This is a free HTML file            -->
 {% include head.html %}
 <body class="plainclass1">
@@ -219,11 +219,11 @@ gem 'github-pages', group: :jekyll_plugins
 <div class="container">
   <header>
   <div class="row">
-    <div class="column right1">
+    <div class="column right2">
+      <br>
       {% if page.title %}{{ page.title | escape }}
       {% else %}{{ site.title | escape }}{% endif %}
-    </div>
-    <div class="column right2">
+      <br><br>
       {% if page.address %}{{ page.address | escape }}
       {% else %}{{ site.address | escape }}{% endif %}
     </div>
@@ -412,8 +412,8 @@ This is a free HTML file
 }
 
 .right1 {
-  height:           66px;
-  width:            calc(100% - 200px);
+  height:           100px;
+  width:            200px;
   padding-top:      24px;
   padding-bottom:   0px;
   padding-left:     30px;
@@ -422,14 +422,11 @@ This is a free HTML file
 }
 
 .right2 {
-  height:           50px;
-  width:            calc(100% - 200px);
   padding-top:      5px;
   padding-bottom:   5px;
   padding-left:     30px;
   font-size:        1.3em;
   font-weight:      bold;
-}
 }
 
 .youtube {
