--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0001e--17-Aug-2022"
+version:          "0001f--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -64,7 +64,7 @@ github:
 <br><br>
 
 Setiap pagi, ibu Alus berjualan Nasi Uduk di ujung simpang jalan Harapan,
-sekitar 300m dari stasiun Lenteng Agung -- sebelah kanan jika mengarah ke Depok.
+sekitar 300m dari stasiun Lenteng Agung -- sebelah kiri jika mengarah ke Depok.
 
 <br id="idx01">
 <img src="images/Nasi-Uduk-Bu-Alus-20220816-0.jpg" width="95%">
