--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0001g--17-Aug-2022"
+version:          "0002--17-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -60,7 +60,7 @@ github:
 # {{ site.title }}
 
 <br id="idx01">
-<img src="images/QR.png" width="95%">
+<img src="images/QR.png" width="100%">
 <br><br>
 
 Setiap pagi, ibu Alus berjualan Nasi Uduk di ujung simpang jalan Harapan,
@@ -68,26 +68,26 @@ sekitar 300m setelah stasiun Lenteng Agung -- sebelah kiri -- jika mengarah ke D
 Biasanya, ibu Alus bersama pak Alus, yang sudah pensiun dari sebuah BUMN bidang perhubungan.
 
 <br id="idx01">
-<img src="images/Nasi-Uduk-Bu-Alus-20220816-0.jpg" width="95%">
+<img src="images/Nasi-Uduk-Bu-Alus-20220816-0.jpg" width="100%">
 <br><br>
 
 Gerobak ibu Alus mudah ditemukan karena lokasinya betul-betul di ujung simpang jalan Harapan, Lenteng Agung.
 Hanya saja, gerobaknya tanpa tanda / tulisan informasi.
 
 <br id="idx02">
-<img src="images/Nasi-Uduk-Bu-Alus-20220816-1.jpg" width="95%">
+<img src="images/Nasi-Uduk-Bu-Alus-20220816-1.jpg" width="100%">
 <br><br>
 
 Selain nasi Uduk, ibu Alus juga berjualan Lontong Sayur dan Gorengan.
 
 <br id="idx03">
-<img src="images/Nasi-Uduk-Bu-Alus-20220816-2.jpg" width="95%">
+<img src="images/Nasi-Uduk-Bu-Alus-20220816-2.jpg" width="100%">
 
 Untuk tahun 2022 ini, harga Nasi Uduk Telur Standar ialah Rp. 13000.
 Kalau dengan "extra tempe", dibulatkan menjadi Rp. 15000.
 
 <br id="idx04">
-<img src="images/Nasi-Uduk-Bu-Alus-20220816-3.jpg" width="95%">
+<img src="images/Nasi-Uduk-Bu-Alus-20220816-3.jpg" width="100%">
 <br><br>
 
 Syarat dan ketentuan berlaku.
@@ -350,6 +350,7 @@ This is a free HTML file
   color:            hsl(0, 100%, 100%);
   background-color: hsl(0, 10%, 10%);
   line-height:      120%;
+  max-width:        70%;
   font-family:      monospace,courier;
 }
 
@@ -378,7 +379,7 @@ This is a free HTML file
 }
 
 .container {
-  max-width:    70%;
+  max-width:    90%;
   margin:       0 auto;
   font-size:    1em;
   text-align:   justify;
@@ -423,6 +424,7 @@ This is a free HTML file
 }
 
 .right2 {
+  width:            90%;
   padding-top:      5px;
   padding-bottom:   5px;
   padding-left:     30px;
