--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0002--17-Aug-2022"
+version:          "0003--23-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -33,7 +33,7 @@ markdown:         "kramdown"
 urlweb:           "https://sdnbhd.github.io/alus/"
 urlcontact:       "TBA"
 urlgithub:        "https://sdnbhd.github.io/alus/"
-google_analytics: "G-KPSLWHN6H7"
+google_analytics: "G-R63RWB2DG9"
 plugins:
 - jekyll-sitemap
 - jekyll-seo-tag
