--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0003--23-Aug-2022"
+version:          "0003a--23-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
