--- a/000.md
+++ b/000.md
@@ -5,7 +5,7 @@ title:  "GitHub Page Configuration Files"
 ### _config.yml
 
 ```
-version:          "0003a--23-Aug-2022"
+version:          "0003b--23-Aug-2022"
 copyright:        "2022-2022"
 title:            "Nasi Uduk Ibu Alus"
 author:           "Ibu Alus"
@@ -64,7 +64,7 @@ github:
 <br><br>
 
 Setiap pagi, ibu Alus berjualan Nasi Uduk di ujung simpang jalan Harapan,
-sekitar 300m setelah stasiun Lenteng Agung -- sebelah kiri -- jika mengarah ke Depok.
+sekitar 300m setelah stasiun Lenteng Agung -- sebelah kiri jalan arah ke Depok.
 Biasanya, ibu Alus bersama pak Alus, yang sudah pensiun dari sebuah BUMN bidang perhubungan.
 
 <br id="idx01">
